--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,8 @@ a {
 }
 
 .search-field, .subscribe-field, .feedback-select, .feedback-field-textarea {
+    -webkit-appearance: none;
+    -moz-appearance: none;
     box-sizing: border-box;
     width: 100%;
     border: none;
@@ -714,7 +716,7 @@ a {
     color: #999999;
 }
 
-.popup {
+.ppopup {
     display: none;
 }
 
@@ -763,14 +765,7 @@ a {
 }
 
 .feedback-select, .feedback-field-textarea {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    font-family: OpenSans, Arial, sans-serif;
-    font-weight: 400;
-    font-size: inherit;
     color: rgba(0, 0, 0, 0.54);
-    background-color: #f4f7f6;
-    border: none;
     margin-top: 10px;
 }
 
@@ -1086,7 +1081,7 @@ a {
     .trends-articles {
         flex-wrap: wrap;
     }
-    
+
     .trends-article {
         width: 49.8%;
         min-height: 230px;
