--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 @font-face {
     font-family: 'OpenSans';
     src: url(../fonts/OpenSans-Bold.woff), url(../fonts/OpenSans-Bold.woff2), url(../fonts/OpenSans-Bold.ttf);
-    font-style: bold;
+    font-style: normal;
     font-weight: 700;
 }
 
